--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,10 @@ display: flex;
 align-items: center;
 justify-content: center;
 padding: 3rem 1.5rem 2rem;
+background-image: linear-gradient(rgb(2, 11, 34), rgba(4, 19, 54, 0.707)), url("image/new-york-city.jpg");
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
 }
 
 .hero {
@@ -484,4 +488,3 @@ flex-direction: column;
 align-items: flex-start;
 }
 }
-
